<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:id="@+id/menu_fr"
    tools:context="com.example.fragment.MenuFragment">



    <ImageView
        android:id="@+id/banner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_delivery"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/pizza_delivery"
        android:textColor="#F64107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/banner"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/enter_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="157dp"
        android:backgroundTint="#F64107"
        android:text="@string/Enter"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="?attr/listPreferredItemPaddingStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner" />


    <Button
        android:id="@+id/basket_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F64107"
        android:text="@string/basket"
        android:textColor="#F8F5F6"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="?attr/listPreferredItemPaddingStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_btn" />

    <Button
        android:id="@+id/about_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F64107"
        android:text="@string/about_us"
        android:textColor="#F4F4F4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="?attr/listPreferredItemPaddingStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basket_btn" />

    <Button
        android:id="@+id/contact_btn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F64107"
        android:text="@string/contact"
        android:textColor="#FFFEFE"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="?attr/listPreferredItemPaddingStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>