<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.fragment.EnterFragment">

    <ImageView
        android:id="@+id/banner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_delivery"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/pizza_delivery"
        android:textColor="#FF3D00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/banner"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/mobile_iv"
        android:layout_width="160dp"
        android:layout_height="180dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="18dp"
        android:src="@drawable/mobile"
        app:layout_constraintBottom_toTopOf="@+id/show_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter" />

    <TextView
        android:id="@+id/show_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tel_number"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_iv"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/enter"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/text_style_6"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/numbertel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_number"
        tools:ignore="MissingConstraints">


        <com.hbb20.CountryCodePicker
            android:id="@+id/countrycode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:ccp_flagBorderColor="@color/black"
            android:paddingStart="8dp"
            app:ccp_showNameCode="false"
            app:ccp_showPhoneCode="true" />

        <EditText
            android:id="@+id/number_et"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/tel_num"
            android:paddingEnd="8dp"

            android:padding="10dp"
            android:textColorHint="@color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/numbertel_btn"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/text_style_6"
        android:gravity="center"
        android:shadowRadius="@integer/material_motion_duration_long_1"
        android:text="@string/show_num"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>