<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submit_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.example.fragment.CodeNumberFragment">


    <ImageView
        android:id="@+id/banner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_delivery"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/pizza_delivery"
        android:textColor="#FF3D00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/banner"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Entercode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="105dp"
        android:text="@string/enter_code"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Entercode_tv"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/number1_et"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:background="#B8B7B7"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="X"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/number2_et"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="#B8B7B7"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="X"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/number3_et"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="#B8B7B7"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="X"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/number4_et"
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:background="#B8B7B7"
            android:cursorVisible="false"
            android:gravity="center"
            android:hint="X"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/conform_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="259dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="DuplicateIds" />
</androidx.constraintlayout.widget.ConstraintLayout>